add template and route for random_point

--- a/views/random_point.ejs
+++ b/views/random_point.ejs
@@ -5,16 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>NoTitle</title>
-    <script src="js/randompointincity.js"></script>
 </head>
 
 <body>
 
-<form action="/random_point" method="POST">
-City:<br>
-<input type="text" id="citytext" name="city"><br>
-<input type="submit" value="Submit">
-</form>
+hai
 
 </body>
 
